--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,21 @@ target/
 
 application.properties
 
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
 ### STS ###
 .apt_generated
 .classpath
@@ -33,3 +48,5 @@ build/
 
 ### VS Code ###
 .vscode/
+.idea
+.idea/workspace.xml
